# python-tts

./: .codacy.yml  .copilotignore  .coveragerc  .dockerignore  .env.example  .env.prod.example  .env.test  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_GUIDE.md  CLEANUP_SUMMARY.md  CORREÇÕES_IMPLEMENTADAS.md  Dockerfile  HOTKEY_SETUP.md  LICENSE  Makefile  README.md  README_STANDALONE.md  TROUBLESHOOTING.md  VOICE_TIMEOUT.md  a.md  app.py  build_configurable.ps1  build_exe.bat  build_exe.ps1  build_exe_fixed.ps1  build_windows.bat  conftest.py  discord_bot.py  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.redis.yml  example_tts_hotkey_config.json  main.py  mutmut_pytest.ini  pyproject.toml  pyrightconfig.json  pytest.ini  render-build.sh  (+16 more)
.codacy/: cli-config.yaml
.codacy/tools-configs/: languages-config.yaml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-workspace.yml  dependabot.yml
.github/instructions/: codacy.instructions.md  documentation-organization.md
.github/workflows/: build-windows.yml  deploy-bot-windows.yml  iac.yml  release.yml  rollback.yml  scorecard.yml  security.yml  test.yml
.specify/: README.md  change-examples.md  change-map.md  review-checklist.md  sync-report-template.md  transition-cleanup.md
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: ai-pitfalls.md  constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
.test-artifacts/repo-roundtrip/: config.json
config/: container.py  quality_gates.json  settings.py
deploy/k8s/: README.md
deploy/observability/: alertmanager-discord-webhook-url.example  alertmanager-discord.tmpl  alertmanager.yml  prometheus.yml  (+2 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_DIAGRAMS_GENERATED.md  ARCHITECTURE_TRANSITIONS.md  BACKUP_AND_RESTORE_DATABASE.md  BOT_PRODUCTION_PERSISTENCE.md  BUILD_GUIDE.md  CHANGE_EXAMPLES.md  CHANGE_MAP.md  CLEANUP_SUMMARY.md  DISCORD_RATE_LIMIT_SOLUTION.md  DOCKER_POSTGRES_DEPLOY.md  ENGINEERING_REFERENCES.md  ENVIRONMENTS.md  HOTKEY_SETUP.md  ICON_TROUBLESHOOTING.md  INTERFACE_CONFIGURACAO.md  MELHORIAS_IMPLEMENTADAS.md  MULTI_SERVER_IMPROVEMENTS.md  README.md  README_DESKTOP_APP.md  README_STANDALONE.md  RUNTIME_FLOWS.md  SETUP.md  SISTEMA_CONEXAO_INTELIGENTE.md  TESTING.md  TRANSITION_CLEANUP.md  TROUBLESHOOTING.md  WINDOWS_BOT_SERVICE.md  WINDOWS_BUILD.md
infra/: README.md
scripts/: README.md  dev.ps1  generate_codex_commit_message.ps1
src/: __init__.py  __version__.py  app.py  bot.py  discord_bot.py  run_with_flask.py  tts_hotkey.py  tts_hotkey_old_with_hardcode.py
tests/: README.md  conftest.py
(+326 files in other folders)
