[project]
name = "tts-hotkey-windows"
version = "0.1.0"
description = "Discord TTS bot and Windows hotkey desktop app."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "keyboard>=0.13.5",
  "pyttsx3>=2.99",
  "sounddevice>=0.5.5",
  "soundfile>=0.13.1",
  "discord.py>=2.7.1",
  "PyNaCl>=1.6.2",
  "davey>=0.1.5",
  "aiohttp>=3.13.5",
  "requests>=2.33.1",
  "python-dotenv>=1.2.2",
  "gtts>=2.5.4",
  "edge-tts>=7.2.8",
  "pystray>=0.19.5",
  "Pillow>=12.2.0",
  "psycopg[binary]>=3.3.3",
  "redis>=7.4.0",
  "opentelemetry-api>=1.41.1",
  "opentelemetry-sdk>=1.41.1",
  "opentelemetry-exporter-otlp-proto-http>=1.41.1",
]

[dependency-groups]
build = [
  "pyinstaller>=5.0",
]
security = [
  "cyclonedx-bom>=7.3.0",
  "pip-audit>=2.9.0",
]
test = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.12",
  "pyright>=1.1.409",
  "defusedxml>=0.7.1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
  ".venv",
  "htmlcov",
]

[tool.ruff.lint]
select = [
  "E9",
  "F",
]

